# package-storage

./: .docs-manifest.yml  .gitignore  AGENT-INSTRUCTION-BUILD-STORAGE.md  AGENT-INSTRUCTION-FIX-STORAGE.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  DATA-MODEL.md  LICENSE  NOTICE  QUALITY-GATE.md  README.md  REQUIREMENTS.md  TESTS.md  defaults.yaml  pyproject.toml
cloud_dog_storage/: __init__.py  async_wrapper.py  errors.py  factory.py  models.py  path_utils.py  traceability_ids.py  transfer.py
cloud_dog_storage/api/: __init__.py
cloud_dog_storage/api/fastapi/: __init__.py  deps.py
cloud_dog_storage/backends/: __init__.py  base.py  ftp.py  google_drive.py  local.py  s3.py  webdav.py
cloud_dog_storage/config/: __init__.py  models.py
cloud_dog_storage/observability/: __init__.py  logging.py
cloud_dog_storage/security/: __init__.py  path_sanitiser.py  tls.py
cloud_dog_storage/testing/: __init__.py  conformance.py  fixtures.py  mock_backend.py
scaffold/: pyproject.toml
scaffold/cloud_dog_storage/: __init__.py
scaffold/tests/: conftest.py
tests/: conftest.py  env-AT  env-IT  env-QT  env-ST  env-UT  test_traceability_ids.py  test_transfer.py
tests/application/AT1.1_FastAPIFileUploadDownload/: test_fastapi_file_ops.py
tests/application/AT1.2_FastAPIStorageDependency/: test_fastapi_storage_dep.py
tests/application/AT1.3_AsyncStorageInFastAPI/: test_async_storage_fastapi.py
tests/application/AT1.4_BackendSwitchViaConfig/: test_backend_switch.py
tests/application/AT1.5_ConformanceSuiteRunner/: test_conformance_runner.py
tests/integration/IT1.10_FtpListDir/: test_ftp_list_dir.py
working/: W28A-118B-PLATFORM-STORAGE-IT-REPAIR-REPORT.md
(+66 files in other folders)
