[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud_dog_storage"
version = "0.1.4"
description = "Cloud-Dog AI platform storage library — storage backends plus PS-94 transfer helpers"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
remote = ["requests>=2.28"]
config = ["cloud_dog_config>=0.1.0"]
logging = ["cloud_dog_logging>=0.1.0"]
fastapi = ["fastapi>=0.100"]
all = [
    "requests>=2.28",
    "cloud_dog_config>=0.1.0",
    "cloud_dog_logging>=0.1.0",
    "fastapi>=0.100",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "build",
    "twine",
    "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["B008", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "env: test environment tier (UT, ST, IT, AT, QT)",
]

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/platform-storage"
